--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>My SMP</title>
+  <title>the smp.</title>
   <style>
     body {
       background-color: #111;
@@ -31,12 +31,12 @@
 </head>
 <body>
 
-  <h1>Welcome to My SMP</h1>
-  <p>The best survival multiplayer experience.</p>
+  <h1>the smp.</h1>
+  <p>a minecraft survival multiplayer.</p>
 
-  <a class="button" href="https://discord.com">Join Our Discord</a>
-  <a class="button" href="https://youtube.com">Watch on YouTube</a>
-  <a class="button" href="#">Donate</a>
+  <a class="button" href="https://discord.com">discord.</a>
+  <a class="button" href="https://youtube.com">youtube.</a>
+  <a class="button" href="#">support.</a>
 
 </body>
 </html>
