--- a/index.html
+++ b/index.html
@@ -34,9 +34,9 @@
   <h1>the smp.</h1>
   <p>a minecraft survival multiplayer.</p>
 
-  <a class="button" href="https://discord.com">discord.</a>
-  <a class="button" href="https://youtube.com">youtube.</a>
-  <a class="button" href="#">support.</a>
+  <a class="button" href="https://discord.gg/vaqzH25JRN">discord.</a>
+  <a class="button" href="https://www.youtube.com/@thesmpdot">youtube.</a>
+  <a class="button" href="https://paypal.me/jsmwsc">support.</a>
 
 </body>
 </html>
