--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 
   <a class="button" href="https://discord.gg/vaqzH25JRN">discord.</a>
   <a class="button" href="https://www.youtube.com/@thesmpdot">youtube.</a>
-  <a class="button" href="https://paypal.me/jsmwsc">paypal.</a>
+  <a class="button" href="https://bisecthosting.com/donate/ec7013a0">donate.</a>
 
 </body>
 </html>
